# ForestOptiLM

./: .dockerignore  .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  README.ru.md  ROADMAP.md  SECURITY.md  THIRD_PARTY_NOTICES.md  VERSION  aggregate.py  app_version.py  audio_transcribe.py  bm25.py  cache.py  chunk_store.py  chunking.py  conflict_resolve.py  connection_presets.py  corpus_manifest.py  corpus_planner.py  deep_analysis.py  deep_research.py  embeddings.py  errors.py  file_extractors.py  findings_aggregate.py  findings_store.py  first_run.py  gui.py  large_corpus_io.py  lm_client.py  lm_studio_api.py  lmstudio_config.py  main.py  map_result_store.py  md3.py  (+33 more)
.github/workflows/: build.yml  lint.yml  release.yml  test.yml
.nocturne_cache/: cache.db
.nocturne_index/: chunks.faiss  chunks_meta.jsonl  index_info.json
assets/: icon.icns
assets/linux/: NocturneDataForge.desktop  install-desktop.sh  run.sh
config/: lmstudio.example.json  run_profiles.yaml
forestoptilm/: __init__.py  cli.py
forestoptilm/providers/: __init__.py  base.py  lmstudio.py
scripts/: build.sh  build_exe.bat  build_exe.ps1  make_icon.py  package_dist.py  prefetch_tiktoken.py  version_info.txt
tests/: __init__.py  conftest.py  test_aggregate.py  test_archive_security.py  test_audio.py  test_bm25.py  test_cache.py  test_categorize_models.py  test_chunk_citations.py  test_chunk_store.py  test_cli.py  test_connection_presets.py  test_context_cache.py  test_context_stop.py  test_corpus_planner.py  test_deep_analysis.py  test_deep_research.py  test_doc_extraction.py  test_embeddings.py  test_eval_metrics.py  test_findings_aggregate.py  test_findings_store.py  test_gui_large_corpus.py  test_hybrid_retrieval.py  test_incremental_index.py  test_large_corpus_io.py  test_lm_client.py  test_lm_studio_api.py  test_lmstudio_config.py  test_lmstudio_integration.py  test_map_prompt.py  test_map_result_store.py  test_map_resume.py  test_md3.py  test_md_render.py  test_merge_hierarchy.py  test_merge_reduce.py  test_model_lifecycle.py  test_new_modules.py  test_notebook_chat.py  (+25 more)
tests/fixtures/: map_sample.json
tools/: ui_preview.py  ui_shot.sh
tools/eval/: FINDINGS.md  README.md  aggregate_judges.py  build_cards.py  ir_metrics.py  runner.py  schema.py
