[project]
name = "forestoptilm"
version = "0.7.0-alpha.1"
description = "Bulk async file processing through local LLMs (LM Studio)"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.10"
authors = [
    { name = "therudywolf" },
]
keywords = ["llm", "lm-studio", "map-reduce", "rag", "document-processing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: General",
]

[project.urls]
Homepage = "https://github.com/therudywolf/ForestOptiLM"
Repository = "https://github.com/therudywolf/ForestOptiLM"
Issues = "https://github.com/therudywolf/ForestOptiLM/issues"

[project.scripts]
forestoptilm = "forestoptilm.cli:main"

[tool.setuptools]
# Flat layout with many top-level modules — name the importable package
# explicitly so setuptools' auto-discovery doesn't bail out. (The app ships as
# a PyInstaller binary; the sdist is just a source snapshot.)
packages = ["forestoptilm"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]
build = ["pyinstaller>=6.0"]

[tool.ruff.lint]
select = ["E", "F"]

[tool.ruff.lint.per-file-ignores]
"forestoptilm/cli.py" = ["E402"]
